pathfinder/tests/BugsViaSourgeforce/Tests/ID.1267018.swallowed_error_messages-1.stable.err.SunOS
stderr of test 'ID.1267018.swallowed_error_messages-1` in directory 'tests/BugsViaSourgeforce` itself:


# 19:00:37 >  
# 19:00:37 >  Mtimeout -timeout 180 Mserver "--config=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./lib/MonetDB:/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./lib/bin" --set "gdk_dbfarm=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./var/MonetDB/dbfarm" --set "sql_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./var/MonetDB/log" --set mapi_port=36969 --set sql_port=44962 --set xquery_port=54507 --set monet_prompt= --trace "--dbname=mTests_tests_BugsViaSourgeforce" --dbinit="module(pathfinder); pfstart();" ; echo ; echo Over..
# 19:00:37 >  

# builtin opt 	config = ${prefix}/etc/MonetDB.conf
# builtin opt 	gdk_arch = 64bitx86_64-redhat-linux-gnu
# builtin opt 	gdk_version = 4.9.3
# builtin opt 	monet_pid = 31302
# builtin opt 	prefix = /net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX.
# builtin opt 	exec_prefix = ${prefix}
# builtin opt 	gdk_dbname = tst
# builtin opt 	gdk_dbfarm = ${prefix}/var/MonetDB
# builtin opt 	gdk_debug = 8
# builtin opt 	gdk_mem_bigsize = 137438953472
# builtin opt 	gdk_vm_minsize = 137438953472
# builtin opt 	gdk_alloc_map = yes
# builtin opt 	monet_admin = adm
# builtin opt 	monet_prompt = >
# builtin opt 	monet_welcome = yes
# builtin opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# builtin opt 	monet_daemon = yes
# builtin opt 	host = localhost
# builtin opt 	mapi_port = 50000
# builtin opt 	mapi_noheaders = no
# builtin opt 	mapi_debug = 0
# builtin opt 	mapi_clients = 2
# builtin opt 	sql_port = 45123
# builtin opt 	sql_debug = 0
# builtin opt 	sql_user = monetdb
# builtin opt 	sql_schema = sys
# builtin opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	prefix = /net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX.
# config opt 	exec_prefix = ${prefix}
# config opt 	gdk_dbfarm = ${prefix}/var/MonetDB/dbfarm
# config opt 	gdk_dbname = demo
# config opt 	gdk_alloc_map = no
# config opt 	gdk_embedded = no
# config opt 	gdk_debug = 0
# config opt 	monet_admin = adm
# config opt 	monet_prompt = MonetDB>
# config opt 	monet_welcome = yes
# config opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# config opt 	monet_daemon = no
# config opt 	mapi_port = 50000
# config opt 	mapi_debug = 0
# config opt 	sql_port = 45123
# config opt 	sql_debug = 0
# config opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	xquery_port = 45789
# config opt 	pf_httpd_port = 8080
# config opt 	xquery_output = dm
# config opt 	xquery_cacheMB = 100
# cmdline opt 	config = /net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./etc/MonetDB.conf
# cmdline opt 	gdk_debug = 10
# cmdline opt 	monet_mod_path = /net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./lib/MonetDB:/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./lib/bin
# cmdline opt 	gdk_dbfarm = /net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./var/MonetDB/dbfarm
# cmdline opt 	sql_logdir = /net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./var/MonetDB/log
# cmdline opt 	mapi_port = 36969
# cmdline opt 	sql_port = 44962
# cmdline opt 	xquery_port = 54507
# cmdline opt 	monet_prompt = 
# cmdline opt 	gdk_dbname = mTests_tests_BugsViaSourgeforce

# 19:00:38 >  
# 19:00:38 >  Mtimeout -timeout 60 MapiClient -lxquery -sxml -u monetdb -P monetdb --host=localhost --port=54507 ID.1267018.swallowed_error_messages-1.xq
# 19:00:38 >  

MAPI  = monetdb@localhost:36155
QUERY = doc("abcdef.xml")
ERROR = !ERROR: [shred_url]: 1 times inserted nil due to errors at tuples 0@0.
        !ERROR: [shred_url]: first error was:
        !ERROR: shred: cannot stat `abcdef.xml': Error 0
        !ERROR: CMDshred_url: operation failed.
        !ERROR: interpret_params: leftfetchjoin(param 2): evaluation error.

# 19:00:38 >  
# 19:00:38 >  Done.
# 19:00:38 >  

